fixed input style on Firefox

--- a/assets/style.css
+++ b/assets/style.css
@@ -122,7 +122,7 @@ article form input {
     border-radius: 4px;
     border: 1px solid #959EA1;
     color: #B62F2F;
-    font-size: 16px;
+    font: 16px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, arial, sans-serif;
     line-height: 150%;
     margin-top: 0.75em;
     padding: 0.2em;
